# track2p_pyrecest_bridge

./: .gitignore  .jscpd.json  .mega-linter.yml  .pylintrc  README.md  README_registration_extension.md  pyproject.toml  test_track2p_multisession_tracking.py  test_track2p_registration_extension.py  track2p_multisession_tracking.py  track2p_registration_extension.py
.github/scripts/: run_track2p_benchmark.py
.github/workflows/: bayescatrack-ci.yml  bridge-ci.yml  track2p-benchmark-comparison.yml  track2p-benchmark.yml  track2p-zenodo-data.yml
docs/: architecture.md
src/bayescatrack/: __init__.py  __main__.py  _exports.py  _legacy_import.py  cli.py  fov_registration.py  ground_truth_eval.py  matching.py  multisession_tracking.py  reference.py  registration.py  track2p_registration.py  tracking.py
src/bayescatrack/association/: __init__.py  _calibrated_mahalanobis_bundle_patch.py  activity_similarity.py  calibrated_costs.py  pyrecest_global_assignment.py
src/bayescatrack/configs/: __init__.py  global_assignment_iou.yaml  global_assignment_learned_cost.yaml  track2p_default.yaml
src/bayescatrack/core/: __init__.py  _bridge_impl.py  _mahalanobis.py  bridge.py
src/bayescatrack/datasets/: __init__.py
src/bayescatrack/datasets/track2p/: __init__.py  synthetic.py
src/bayescatrack/evaluation/: __init__.py  calibration_diagnostics.py  calibration_metrics.py  complete_track_scores.py  fixed_precision.py  track2p_metrics.py  track_error_ledger.py
src/bayescatrack/experiments/: __init__.py  benchmark_comparison.py  track2p_benchmark.py  track2p_calibration_export.py  track2p_global_assignment_ablation.py  track2p_loso_calibration.py
src/bayescatrack/io/: __init__.py  suite2p.py  track2p.py
src/track2p_pyrecest_bridge/: __init__.py  ground_truth_eval.py  matching.py  registration.py  track2p_registration.py
tests/: __init__.py  _support.py  conftest.py  test_activity_similarity.py  test_bayescatrack_core.py  test_bayescatrack_layout.py  test_benchmark_comparison.py  test_benchmark_manifest.py  test_calibrated_costs.py  test_calibrated_covariance_features.py  test_calibration_diagnostics.py  test_calibration_metrics.py  test_complete_track_scores.py  test_fov_registration.py  test_fov_registration_layout.py  test_global_assignment_ablation.py  test_loso_calibration.py  test_mahalanobis_centroid_distance.py  test_multisession_tracking.py  test_reference.py  test_registration.py  test_synthetic_track2p_dataset.py  test_track2p_benchmark.py  test_track2p_calibration_export.py  test_track2p_ground_truth_eval.py  test_track2p_matching.py  test_track2p_pyrecest_bridge.py  test_track2p_registration.py  test_track_error_ledger.py  test_tracking.py
