[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "track2p-pyrecest-bridge"
version = "0.1.0"
description = "Track2p / Suite2p bridge for PyRecEst"
readme = "README_track2p_pyrecest_bridge.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy",
    "pyrecest @ git+https://github.com/FlorianPfaff/pyRecEst.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
track2p-pyrecest-bridge = "track2p_pyrecest_bridge:main"

[project.urls]
Repository = "https://github.com/FlorianPfaff/track2p_pyrecest_bridge"

[tool.setuptools]
py-modules = ["track2p_pyrecest_bridge"]

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
line-length = 180

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:bayesian_filters.*",
    "ignore::DeprecationWarning:mpmath.*",
    "ignore::scipy.optimize.OptimizeWarning",
]
[tool.pylint.MAIN]
py-version = "3.13"
fail-under = 10
ignore = ["CVS"]
ignored-modules = ["pyrecest.backend", "healpy"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  "C",
  "W0221",
  "cyclic-import",
]

[tool.pylint.FORMAT]
max-line-length = 180

[tool.pylint.DESIGN]
max-args = 6
max-parents = 15
max-public-methods = 25
min-public-methods = 0
